# catalogus

./: .gitignore  Dockerfile  README.md
api-bohemond/: Cargo.toml  Rocket.toml  bohemond.yaml
api-bohemond/resources/: catalogus.csv  openapi.json
api-bohemond/src/: application_configuration.rs  main.rs  routes.rs
cli/: Cargo.toml  data.js
cli/src/: main.rs
data_transcriber/: Cargo.toml
data_transcriber/src/: data_catalogus.rs  errors.rs  lib.rs
deployment/: manifest-bohemond.yaml
