[package]
name = "api-bohemond"
version = "0.1.0"
authors = ["Nathaniel Ford <nathanielford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "*", features = ["env", "toml", "json", "yaml"] }
data_transcriber = { path = "../data_transcriber"}
okapi = "0.7.0-rc.1"
path-clean = "*"
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", branch = "master" }
rocket_okapi = "0.8.0-rc.1"
schemars = "*"
serde = "*"
tracing = "*"
tracing-serde = "*"
tracing-subscriber = "*"
