[package]
name = "data_transcriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
path-clean = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
tracing = "*"
tracing-subscriber = "*"
